<resources>
    <string name="app_name">心情日記本</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="sign">註冊</string>
    <string name="sign_hint">還沒有帳號?請註冊!</string>
    <string name="login_err1">信箱格式不合</string>
    <string name="login_err2">請輸入密碼</string>
    <string name="login_err3">登入成功</string>
    <string name="login_err4">登入失敗</string>
    <string name="login_err5">請稍後</string>
    <string name="login_err6">創建用戶中...</string>
    <string name="login_err7">登入中...</string>
    <string name="login_err8">請至少輸入6個字元</string>
    <string name="login_err9">請輸入名稱</string>
    <string name="login_err10">請輸入日記鎖</string>
    <string name="userid">信箱</string>
    <string name="userpassword">密碼</string>
    <string name="username">名稱</string>
    <string name="userkey">日記鎖</string>
    <string name="select_image">選擇圖片</string>
    <string name="diary_title">標題</string>
    <string name="diary_time">時間</string>
    <string name="diary_text">內容</string>
    <string name="add_diary">加入當天日記</string>
    <string name="alt_title">授予權限</string>
    <string name="alt_text">是否要讓應用程式存取媒體庫</string>
    <string name="alt_yes">是</string>
    <string name="alt_no">否</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">首頁</string>
    <string name="menu_diary">顯示日記</string>
    <string name="menu_inputemo">輸入日記+心情</string>
    <string name="simle">開心</string>
    <string name="sad">難過</string>
    <string name="angry">生氣</string>
    <string name="heart">心動</string>
    <string name="push_date">日期:</string>
    <string name="average">平均:</string>
    <string name="quotations">語錄:</string>
    <string name="quotations_simle1">快樂是內心的陽光，照亮你的生活。</string>
    <string name="quotations_simle2">開心是一種選擇，讓每個選擇都帶來快樂。</string>
    <string name="quotations_simle3">快樂不在於事情的結果，而在於你對事情的態度。</string>
    <string name="quotations_simle4">每天都給自己一個微笑，讓快樂成為你的日常習慣。</string>
    <string name="quotations_simle5">快樂是一種傳染病，讓你的快樂感染身邊的人。</string>
    <string name="quotations_simle6">快樂是最美麗的化妝品，讓你散發出光彩動人的魅力。</string>
    <string name="quotations_simle7">快樂是生活的調味劑，讓每一天都變得更加美味。</string>
    <string name="quotations_simle8">快樂不需要理由，它本身就是最好的理由。</string>
    <string name="quotations_simle9">快樂是內心的寶藏，要時刻珍惜和保護它。</string>
    <string name="quotations_simle10">快樂是你人生的旅伴，和它攜手同行，你將走過美麗的旅程。</string>
    <string name="quotations_sad1">難過是生活中的一道風景，但它不會永遠存在。</string>
    <string name="quotations_sad2">難過是一種情緒，讓它經過，卻不要讓它主宰你的生活。</string>
    <string name="quotations_sad3">難過是成長的機會，從中學到的教訓將讓你更堅強。</string>
    <string name="quotations_sad4">難過是心靈的護城河，讓你更加懂得珍惜快樂的時刻。</string>
    <string name="quotations_sad5">難過是一個過程，接受它並相信自己有能力走出陰霾。</string>
    <string name="quotations_sad6">難過是一張照鏡子的機會，讓你更深入了解自己的內在世界。</string>
    <string name="quotations_sad7">難過是情感的養分，它讓你更懂得珍惜愛和溫暖。</string>
    <string name="quotations_sad8">難過是生活的一部分，但它不應該成為你生活的全部。</string>
    <string name="quotations_sad9">難過是暫時的，但你的堅強和勇氣將永遠存在。</string>
    <string name="quotations_sad10">難過是一個舞台，你是主角，劇情的轉折將讓你更加璀璨。</string>
    <string name="quotations_angry1">生氣是一個火焰，但你可以選擇是否將它燃燒成破壞或轉化成力量。</string>
    <string name="quotations_angry2">生氣是一種情緒，學會掌控它，而不是讓它掌控你。</string>
    <string name="quotations_angry3">生氣是一面鏡子，它反映出你對事情的價值觀和期望。</string>
    <string name="quotations_angry4">生氣是能量的浪費，轉化它為積極的行動和解決問題的能力。</string>
    <string name="quotations_angry5">生氣是一個信號，讓你知道有些事情需要改變或處理。</string>
    <string name="quotations_angry6">生氣是對自己和他人的一種傷害，學會以寬容和理解的心態面對困難。</string>
    <string name="quotations_angry7">生氣是一個警覺，提醒你保護自己的界限和尊重。</string>
    <string name="quotations_angry8">生氣是一個機會，挑戰你的成長和修煉內在的平靜和智慧。</string>
    <string name="quotations_angry9">生氣是一把雙刃劍，當你學會掌握它時，它可以成為你的力量和動力。</string>
    <string name="quotations_angry10">生氣是一個暫時的情緒，但選擇如何應對和處理它將影響你的長期幸福。</string>
    <string name="quotations_heart1">心動是靈魂的共鳴，讓它引領你走向真實的自己。</string>
    <string name="quotations_heart2">心動是生活的火花，點燃你對生命的熱情和渴望。</string>
    <string name="quotations_heart3">心動是內心的指南針，指引你選擇和追求真正讓你快樂的事物。</string>
    <string name="quotations_heart4">心動是一種力量，勇敢跨出舒適區，追求你的夢想和目標。</string>
    <string name="quotations_heart5">心動是靈感的源泉，讓它激發你的創造力和創新思維。</string>
    <string name="quotations_heart6">心動是一種感知，聆聽內心的聲音，它會指引你走向自己的道路。</string>
    <string name="quotations_heart7">心動是生命的節奏，跟隨它的音樂，你將發現無盡的可能性。</string>
    <string name="quotations_heart8">心動是一種喜悅，它讓你感受到活著的真實與美好。</string>
    <string name="quotations_heart9">心動是勇氣的象徵，相信自己的直覺和選擇，即使它們看似冒險或不確定。</string>
    <string name="quotations_heart10">心動是存在的意義，讓它引領你綻放出真正的生命光芒。</string>
    <string name="suggestions">建議:</string>
    <string name="suggestions_simle1">學會放鬆和愉快地面對生活的壓力。</string>
    <string name="suggestions_simle2">尋找和培養自己的興趣和愛好，並將其納入日常生活中。</string>
    <string name="suggestions_simle3">和積極、開朗的人交朋友，分享快樂和正能量。</string>
    <string name="suggestions_simle4">珍惜並表達對身邊人的感激之情，讓愛和感恩成為生活的一部分。</string>
    <string name="suggestions_simle5">每天給自己一些時間，做一些讓自己開心的事情。</string>
    <string name="suggestions_simle6">保持樂觀的心態，相信困境總有解決的辦法。</string>
    <string name="suggestions_simle7">擺脫消極的思維模式，轉變為積極的思考方式。</string>
    <string name="suggestions_simle8">深呼吸並注重身體健康，運動和良好的飲食有助於提升快樂感。</string>
    <string name="suggestions_simle9">學會接受和放下過去的失敗和痛苦，專注於當下和未來的可能性。</string>
    <string name="suggestions_simle10">培養一個感恩的心態，將快樂和幸福與他人分享。</string>
    <string name="suggestions_sad1">允許自己感受難過的情緒，不要壓抑或避開它們。</string>
    <string name="suggestions_sad2">找一個可以信任和理解的人傾訴你的心聲，分享你的負擔。</string>
    <string name="suggestions_sad3">給自己時間和空間來處理和療愈，不要急於追求快速的解決方案。</string>
    <string name="suggestions_sad4">尋找舒適的活動，如閱讀、散步、瑜伽等，以幫助自己放鬆和平靜心情。</string>
    <string name="suggestions_sad5">培養正面的自我對話，用慈悲和理解的語言對待自己。</string>
    <string name="suggestions_sad6">尋找並講述一些正向的故事或經歷，讓它們成為你內心的支持和鼓勵。</string>
    <string name="suggestions_sad7">培養一個感恩的心態，意識到生活中的美好和值得珍惜之處。</string>
    <string name="suggestions_sad8">尋求專業的支持，如心理諮詢師或治療師，他們可以提供適當的幫助和指導。</string>
    <string name="suggestions_sad9">專注於自我成長和發展，找到可以轉化負面情緒的方法，如學習新技能或追求個人興趣。</string>
    <string name="suggestions_sad10">不要忘記你的內在力量和堅韌，相信自己有能力走出難過的陰影，迎接更美好的未來。</string>
    <string name="suggestions_angry1">在生氣之前，停下來深呼吸，讓自己冷靜下來。</string>
    <string name="suggestions_angry2">找到合適的方式表達你的情緒，如寫日記、藝術創作或找一個值得信任的人傾訴。</string>
    <string name="suggestions_angry3">避免立即做出衝動的回應，給自己一些時間來冷靜思考。</string>
    <string name="suggestions_angry4">想一想導致你生氣的原因，試著從對方的角度思考，以增加理解和同理心。</string>
    <string name="suggestions_angry5">與他人溝通時保持冷靜和尊重，用溫和的語氣表達自己的觀點。</string>
    <string name="suggestions_angry6">尋找解決問題的方法，而不是將生氣的情緒釋放到無關緊要的事情上。</string>
    <string name="suggestions_angry7">尋求和平解決衝突的方式，如妥協、協商或尋求第三方的幫助。</string>
    <string name="suggestions_angry8">專注於自我成長和修煉內在的平靜和寬容，如冥想、瑜伽或心理學習。</string>
    <string name="suggestions_angry9">學會適時的放鬆和釋放壓力，如運動、散步大自然或享受興趣愛好。</string>
    <string name="suggestions_angry10">給自己寬恕和接受自己的情緒，明白生氣是人類情感的一部分，而不是過錯或弱點。</string>
    <string name="suggestions_heart1">專注於內心的聲音，聆聽自己真正渴望的事物。</string>
    <string name="suggestions_heart2">探索自己的興趣和熱情，將它們融入日常生活。</string>
    <string name="suggestions_heart3">勇敢嘗試新事物，不要讓恐懼和不確定性阻礙你的心動。</string>
    <string name="suggestions_heart4">與志同道合的人交流和分享，彼此激發心動的能量。</string>
    <string name="suggestions_heart5">給自己創造實現夢想的機會，設定目標並努力追求。</string>
    <string name="suggestions_heart6">保持開放的心態，願意接受新的想法和觀點。</string>
    <string name="suggestions_heart7">學會從挫折和失敗中學習，並堅持追求內心的心動。</string>
    <string name="suggestions_heart8">為自己設定挑戰，超越自己的舒適區，拓展心動的領域。</string>
    <string name="suggestions_heart9">給予自己足夠的時間和空間，去探索和實現內心的心動。</string>
    <string name="suggestions_heart10">擁抱生命的變化和轉折，相信每一次心動都會帶領你更接近真正的幸福和成就。</string>
    <string name="suggestions_confuse1">每一次的努力都不會白費，因為它們都在積累成為您成功的基石。</string>
    <string name="suggestions_confuse2">無論前方有多大的困難，只要保持信念，您就能找到剋服困難的方法。</string>
    <string name="suggestions_confuse3">做好當下的事情，而不是糾結於過去或擔憂未來，這樣才能真正活在當下。</string>
    <string name="suggestions_confuse4">人生沒有捷徑可走，只有堅持不懈的努力，才能獲得真正的成就。</string>
    <string name="suggestions_confuse5">每一次失敗都是一次寶貴的學習機會，不要畏懼失敗，而是勇敢地從中汲取經驗。</string>
    <string name="suggestions_confuse6">積極的心態可以改變您的生活，相信自己，您就能創造奇跡。</string>
    <string name="suggestions_confuse7">每一天都是一個新的開始，不要被昨天的困擾所束縛，抓住今天的機會。</string>
    <string name="suggestions_confuse8">感恩是一種美德，珍惜身邊的人和事物，您將發現生活更加美好。</string>
    <string name="suggestions_confuse9">成功不是一蹴而就的，它是通過持續不斷的努力和堅持才能實現的。</string>
    <string name="suggestions_confuse10">無論您身處何種境遇，都不要放棄希望，因為希望是引領您走向光明的力量。</string>
    <string name="menu_touch">教學</string>
    <string name="menu_touch1">這是個抒發心情的APP</string>
    <string name="menu_touch2">1. 首頁的月曆會顯示當天心情的趨勢</string>
    <string name="menu_touch3">2. 在月曆點擊當天的區域可以顯示心情詳細資訊</string>
    <string name="menu_touch4">3. 日記頁可以看以天為單位的日記顯示</string>
    <string name="menu_touch5">4. 查看日記須要使用密碼鎖</string>
    <string name="menu_touch6">5. 輸入日記心情頁可以在那天加入訊息，會是累計的形式</string>
    <string name="menu_touch7">6. 假如今天特別生氣，請按爆輸入日記心情頁的生氣臉!</string>
    <string name="menu_touch8">7. 個人設置頁可以修該個人資訊，但信箱無法修改~</string>
    <string name="menu_setting">個人設置</string>
    <string name="change">修改</string>
    <string name="title_activity_trytry">trytry</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>