<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/gif_book"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/userid"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittext_userid"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="email"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^&amp;*()-=_+[]{}|;':&quot;,./&lt;&gt;?"
                android:inputType="textEmailAddress"
                android:textColor="@color/gray_dark"
                android:imeOptions="actionSend"
                android:singleLine="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:scrollHorizontally="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/userpassword"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittextuser_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="password"
                android:ems="10"
                android:inputType="textPassword"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^&amp;*()-=_+[]{}|;':&quot;,./&lt;&gt;?"
                android:textColor="@color/gray_dark"
                android:imeOptions="actionSend"
                android:singleLine="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:scrollHorizontally="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:background="@drawable/rounded_button"
                android:text="@string/login"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_sign"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/sign"
                android:textSize="20sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/noAccountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/gray_dark"
            android:text="@string/sign_hint"
            android:padding="5dp"
            />
    </LinearLayout>
</FrameLayout>