<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/diary_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittext_diarytitle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:ems="10"
                android:inputType="textFilter"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/diary_time"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

                <DatePicker
                    android:id="@+id/datepicker_diary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/date_picker_theme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/diary_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittext_diary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:background="@drawable/edittext_background"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:scrollbars="vertical"
                />


        </LinearLayout>

        <Button
            android:id="@+id/btn_adddiary"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/add_diary"
            android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>